# OOPT_development_test

./: .gitignore  README.md
source-code/: CMakeLists.txt
source-code/include/: AltDVM.hpp  AltDVMManager.hpp  AltDVMMsgManager.hpp  AuthCode.hpp  AuthCodeManager.hpp  Bank.hpp  DVM.hpp  Item.hpp  ItemManager.hpp  MsgManager.hpp  P2PClient.hpp  P2PServer.hpp  PaymentManager.hpp  PrePaymentManager.hpp  SocketClient.hpp
source-code/src/: AltDVM.cpp  AltDVMManager.cpp  AltDVMMsgManager.cpp  AuthCode.cpp  AuthCodeManager.cpp  Bank.cpp  DVM.cpp  Item.cpp  ItemManager.cpp  MsgManager.cpp  P2PClient.cpp  P2PServer.cpp  PaymentManager.cpp  PrePaymentManager.cpp  SocketClient.cpp  main.cpp
source-code/test/: testCode.cpp
